src/test/ui/tool-attributes/tool-attributes-misplaced-2.rs
#[derive(rustfmt::skip)] //~ ERROR expected a macro, found tool attribute
struct S;

fn main() {
    rustfmt::skip!(); //~ ERROR expected a macro, found tool attribute
}
